# website

./: CNAME
.github/workflows/: static.yaml
content/: index.html  investing.md  style.css  style.md  writing.html
sss/: Cargo.toml
sss/src/: builder.rs  lib.rs  main.rs  server.rs
template/: base.html  post.html
