[package]
name = "sss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "*" }
axum = { version = "*" }
clap = { version = "*", features = ["derive"] }
comrak = { version = "*" }
glob = { version = "*" }
notify = { version = "*" }
regex = { version = "*" }
serde_yaml_ng = { version = "*" }
tera = { version = "*" }
tokio = { version = "*", features = ["rt-multi-thread"] }
tower-http = { version = "*", features = ["fs"] }
